# ChangeLog for x11-misc/xanalyser
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2010; Frieder Buerzele <evermind@tuxfamily.org>
  xanalyser-1.32.ebuild:
  update dependencies

*xanalyser-1.32 (13 Apr 2010)

  13 Apr 2010; Frieder Buerzele <evermind@tuxfamily.org>
  -xanalyser-1.30.ebuild, +xanalyser-1.32.ebuild:
  bumped and fixed dependencies -- install dir still not fixed

  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
  added a changelog
