@@ -1,4 +1,4 @@
-DIST xanalyser-1.32.tar.bz2 86086 RMD160 964d02d6a388f3430706fa2ed277478f0c65146b SHA1 16304422cc71b7a67f45a0930649ac46cc2fcb20 SHA256 8ca3f65bcaad92b1421912311da47e4aa1741a4bb1f422eaf85d75e5996f7946
-EBUILD xanalyser-1.32.ebuild 751 RMD160 22ffab43866e2f475ec06b3a0033cd90eddeb905 SHA1 24aa51d5a8955299d989425baabf09e690469050 SHA256 2f8875e7f14a6ada5f9d8fbb0a200f334af26dbdb85848076e71c999143a8a73
-MISC ChangeLog 513 RMD160 cad9dc83e7c60cde3738e8c3b39fed9649bd3d96 SHA1 2a196d172678378c7c6bba655aa4c75db5580212 SHA256 b0396deb693512f7cd768db72eb858fa6b946a17bb0645db57ed14d830d65283
-MISC metadata.xml 268 RMD160 facc07bd885f20615a1f2555069329c642e1a566 SHA1 2456bdb8a218c9d477d2d6ee4bf158de070c7be4 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89
+DIST xanalyser-1.32.tar.bz2 86086 SHA256 8ca3f65bcaad92b1421912311da47e4aa1741a4bb1f422eaf85d75e5996f7946 SHA512 ec5d56643a44cadf664fafc7359e76df0877e7d4eea4ebde0c81fe7fca6b1e7b57c0ceb7244b4eed6fb4507b811bbd3b8237d2eeb8ce07a1adb7232350991726 WHIRLPOOL 73c8ca6f9b0f9ab0005b9f7d74fa0ec5f58554f42aebccb4cc751d940ed66a568aab1a6824cf0e4ebe2c53171e6c427825c45d45617f3308114d2bdd7fa13927
+EBUILD xanalyser-1.32.ebuild 482 SHA256 05354cd4e4272b9e3b479ce3f0ee43e781cd810bd1a9e78d0e626adc60a2e848 SHA512 6ea84387fffae9fc6516f82be09aa6768995c1dd6d8c0736213e187898920e9bf10e3c0e52f3a7f3fbc1b468e2d2c6e473a732502ab950026276ce78ca98a8c1 WHIRLPOOL 054561592e30081be91c88fb575d180d1c60a0c612b591269549e399a09a6f4a4fc9eefe0c2f078f0c6327e1f0aaa7f1e5ecc3efd5deac02223da5b3c90d5210
+MISC ChangeLog 723 SHA256 56f6b7fac6621d12c2204834706d130ff5afd500740fed879dac25f945b57463 SHA512 af97030869e19706f0f785b139a261439d23d5d975cd5ee2a3f0da19f194b24ce5cf611f1d3cdcee338c30a87ce7ce9541724cef55bf8a169ecf4fe50b138b11 WHIRLPOOL 4700ea2924a1b5eb1940a74eac0f4a15e4641963bc1735369f16daba38ee5bc6743eeae298972c02c1696b28e7b8260595db803a29958a0b813a287d35d0e1c4
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
